// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavbarLink render default 1`] = `
<div
  className="sc-bdnylx dFDwsK"
>
  <div
    data-mock="NavLink"
  >
    {
  "to": "/test-link",
  "exact": false,
  "className": "sc-gtssRu gqthSC"
}
  </div>
</div>
`;

exports[`NavbarLink should render button 1`] = `
<div
  className="sc-bdnylx dFDwsK"
>
  <button
    data-mock="TransparentButton"
  >
    {
  "className": "sc-dlnjPT dJvlHt nav-link"
}
  </button>
</div>
`;

exports[`NavbarLink should render exact 1`] = `
<div
  className="sc-bdnylx dFDwsK"
>
  <div
    data-mock="NavLink"
  >
    {
  "to": "/test-link",
  "exact": true,
  "className": "sc-gtssRu gqthSC"
}
  </div>
</div>
`;
